# DFX-Color-Palette-Generator

./: .env  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
.dfx/ic/canisters/backend/: service.did.js
.dfx/ic/lsp/: rimxq-wyaaa-aaaae-qfd2q-cai.did
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/backend/: constructor.old.did  service.did  service.did.d.ts  service.did.js
.dfx/local/canisters/internet_identity/: constructor.did
.dfx/local/lsp/: rdmx6-jaaaa-aaaaa-aaadq-cai.did
backend/: Cargo.toml  lib.rs
frontend/: index.html  index.js  main.css
frontend/public/.well-known/: ic-domains
src/declarations/backend/: backend.did.js
