[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
ic-cdk = "0.7"
ic-cdk-macros = "0.7"
ic-stable-structures = "0.4"
serde = { version = "1.0", features = ["derive"] }
candid = "0.8"